# napper

./: .editorconfig  .gitignore  .napenv  Claude.md  Directory.Build.props  LICENSE  Makefile  Nap.slnx  Napper.slnx  README.md  coverage-thresholds.json  nap
.github/: pull_request_template.md
.github/workflows/: ci.yml  deploy-pages.yml  deploy-website.yml  pr.yml  release.yml
docs/: cli-reference.md  file-formats.md  vsix-binary-audit.md
docs/plans/: IDE-EXTENSION-INSTALL-PLAN.md  IDE-EXTENSION-PLAN.md  LSP-PLAN.md  ZED-EXTENSION-PLAN.md
docs/specs/: CLI-OPENAPI-GENERATION.md  CLI-SPEC.md  HTTP-FILES-SPEC.md  IDE-EXTENION-OPENAPI-GENERATION-SPEC.md  IDE-EXTENSION-SPEC.md  LSP-SPEC.md
examples/: full-suite-report.html  full-suite.naplist
examples/httpbin/: .napenv  01_get-json.nap  02_post-json.nap  03_put-json.nap  04_delete.nap  05_patch.nap  06_status-codes.nap  07_response-headers.nap  08_user-agent.nap  09_delayed-response.nap  10_basic-auth.nap  advanced.naplist  all-methods.naplist
examples/jsonplaceholder/: .napenv  .napenv.staging  01_get-posts.nap  02_get-post-by-id.nap  03_create-post.nap  04_update-post.nap  05_patch-post.nap  06_delete-post.nap  07_get-comments.nap  08_get-user-todos.nap  09_get-user-detail.nap  crud-csharp-report.html  crud-csharp.naplist  crud-report.html  crud.naplist  mixed-scripts.naplist  read-only.naplist
examples/petstore/: 01_list-pets.nap  02_get-pet.nap  create-post.nap  get-user-by-id.nap  smoke.naplist
examples/scripts/: report.csx  report.fsx  setup.csx  setup.fsx  smoke-tests.csx  smoke-tests.fsx  teardown.csx  teardown.fsx  validate-env.csx  validate-env.fsx
scripts/: build-all.sh  build-cli.sh  build-extension.sh  build-vsix.sh  build-zed.sh  bump-version.sh  clean-install.sh  coverage-fsharp.sh  coverage-typescript.sh  coverage.sh  dump-cli-help.sh  install.ps1  install.sh  package-vsix.sh  package.sh  test-fsharp.sh  test.sh
specs/: CLI-PLAN.md  CLI-SPEC.md  FILE-FORMATS-SPEC.md  HTTP-FILES-PLAN.md  IDE-EXTENSION-PLAN.md  IDE-EXTENSION-SPEC.md  LSP-PLAN.md  Napper.md  OpenApiGeneration.md  SCRIPTING-SPEC.md
src/DotHttp.Tests/: .gitignore  DotHttp.Tests.fsproj  ParserTests.fs  RealWorldTests.fs  (+1 more)
src/Napper.Zed/: Cargo.toml  README.md  extension.toml
src/Napper.Zed/grammars/tree-sitter-nap/: grammar.js  package.json  tree-sitter.json
src/Napper.Zed/grammars/tree-sitter-nap/src/: node-types.json
src/Napper.Zed/grammars/tree-sitter-napenv/src/: grammar.json  node-types.json  parser.c
src/Napper.Zed/grammars/tree-sitter-naplist/: grammar.js
src/Napper.Zed/grammars/tree-sitter-naplist/src/: parser.c
src/Napper.Zed/languages/nap/: config.toml  highlights.scm  injections.scm  redactions.scm  runnables.scm
src/Napper.Zed/languages/naplist/: brackets.scm  config.toml  highlights.scm  indents.scm
src/Napper.Zed/src/: lib.rs
src/Napper.Zed/src/tests/: tests_fs.rs  tests_pure.rs
website/: DESIGN_SYSTEM.md  eleventy.config.js  package-lock.json  package.json
(+283 files in other folders)
